--- a/frontend_angular/package.json
+++ b/frontend_angular/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@angular/fire": "^16.0.0",
     "ngx-image-cropper": "^7.1.1",
     "ngx-webcam": "^0.4.1",
+    "firebase": "^10.5.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
