--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
 
     - name: Remove old JS files
       run: |
+        sudo apt-get update
+        sudo apt-get install -y lftp
         lftp -u ${{ secrets.FTP_USERNAME }}, ${{ secrets.FTP_PASSWORD }} ftpupload.net -e "
         glob -a rm -f /htdocs/main.*.js;
         glob -a rm -f /htdocs/runtime.*.js;
